# new_web_plugin

./: Cargo.toml  README.md  manifest.json  my_plugin.d.ts  my_plugin.js  my_plugin_bg.wasm  my_plugin_bg.wasm.d.ts  package-lock.json  popup.html  script.js  style.css
src/: lib.rs
