[package]
name = "my_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Window", "Document", "NodeList", "Element", "ServiceWorkerGlobalScope", "Navigator", "ServiceWorkerContainer", "ServiceWorker", "Clients", "MediaDevices", "HtmlElement", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "HtmlCanvasElement", "WebGlBuffer", "CanvasRenderingContext2d", "ImageData", "HtmlImageElement", "MediaStreamConstraints", "MediaStream", "MediaStreamTrack", "ImageCapture", "Blob"] }

